# sem_1_labs

./: README.md  task1.cpp
DZ2/: dz2.cpp
DZ3/: dz3.cpp
Lab_1/: task1_1.cpp  task2_1.cpp  task3_1.cpp  task4_1.cpp
Lab_2/: task2_1.cpp
Lab_3/: task10_2.cpp  task11_2.cpp  task1_2.cpp  task2_2.cpp  task3_2.cpp  task4_2.cpp  task5_2.cpp  task6_2.cpp  task7_2.cpp  task8_2.cpp  task9_2.cpp
Lab_4/: task1_4.cpp  task2_4.cpp  task3_4.cpp  task4_4.cpp  task5_4.cpp  task6_4.cpp  task7_4.cpp  task8_4.cpp
Lab_5/: header.h  task5_1.cpp
Lab_6/: CMakeLists.txt  diff_words.cpp  find.cpp  find_sorted.cpp  lab.h  lab06.cpp  pluses_deleter.cpp  reverse_num.cpp  sort_list.cpp  unique_words.cpp  words_counter.cpp  words_map.cpp
Lab_7/: SaveLoadWords.cpp  Students.cpp  book.cpp
Lab_8/: Strings.cpp  matrix.cpp
Lab_9/: ReversePolishNotation.cpp
