cmake_minimum_required(VERSION 3.10)
project(lab06)

set(CMAKE_CXX_STANDARD 11)

add_executable(lab06
        lab06.cpp
        find.cpp
        findInSorted.cpp
        wordsCounter.cpp
        wordsMapCounter.cpp
        uniqueWords.cpp
        diffWordsCounter.cpp
        reverseNum.cpp
        plusesDeleter.cpp
        sortList.cpp
)